--- a/sockeronsdag/src/App.css
+++ b/sockeronsdag/src/App.css
@@ -1,38 +1,90 @@
+html {
+	overflow-y: scroll;
+}
+
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 10s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 4s linear;
+	}
 }
 
+
+
 .App-header {
-  background-color: #314161;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #314161;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
+}
+
+
+.App-subHeading{
+	margin-bottom:0;
+}
+
+.App-event {
+	margin-top: 20px;
+}
+
+	.App-event ul {
+		list-style-type: none;
+	}
+
+	.App-event li {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 25px;
+	}
+
+		.App-event li.is-animated span {
+			display: block;
+			animation: App-logo-scale infinite .8s ease-in-out;
+		}
+
+.App-eventImage {
+	display: block;
+	max-width: 250px;
+	margin-left: 50px;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+
+	to {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes App-logo-scale {
+	0% {
+		transform: scale(1);
+	}
+
+	50% {
+		transform: scale(1.2);
+	}
+
+	100% {
+		transform: scale(1);
+	}
 }
