--- a/sockeronsdag/src/App.css
+++ b/sockeronsdag/src/App.css
@@ -61,8 +61,9 @@ html {
 
 .App-eventImage {
 	display: block;
-	max-width: 250px;
+	width: 295px;
 	margin-left: 50px;
+	max-width: 44%;
 }
 
 @keyframes App-logo-spin {
