--- a/sockeronsdag/src/App.css
+++ b/sockeronsdag/src/App.css
@@ -9,6 +9,7 @@ html {
 .App-logo {
 	height: 40vmin;
 	pointer-events: none;
+	display: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -88,4 +89,38 @@ html {
 	100% {
 		transform: scale(1);
 	}
+}
+
+.jgsQQW, .cCHUep, .jImxOi {
+	display: none !important;
+}
+
+.fcrYGG{
+	background-color: #fff;
+}
+
+.zyuFN {
+	background-color: transparent;
+	background-image: url('candy.jpg');
+}
+
+.cCHUep {
+	background-image: url('lollipop.png');
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-color: transparent;
+	height: 190px;
+	max-height: 500px;
+	transform: rotate(-90deg);
+}
+
+.expkjb {
+	background-image: url('polkagris.png');
+	background-size: 108%;
+	background-repeat: no-repeat;
+	background-color: transparent;
+	height: 193px;
+	max-height: 500px;
+	transform: rotate( -90deg);
+	background-position: center top;
 }
