--- a/sockeronsdag/src/App.css
+++ b/sockeronsdag/src/App.css
@@ -1,91 +1,86 @@
 html {
-	overflow-y: scroll;
+  overflow-y: scroll;
 }
 
 .App {
-	text-align: center;
+  text-align: center;
 }
 
 .App-logo {
-	height: 40vmin;
-	pointer-events: none;
+  height: 40vmin;
+  pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 4s linear;
-	}
+.App-logo {
+  animation: App-logo-spin infinite 4s linear;
 }
-
-
 
 .App-header {
-	background-color: #314161;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
+  background-color: #314161;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
 .App-link {
-	color: #61dafb;
+  color: #61dafb;
 }
 
-
-.App-subHeading{
-	margin-bottom:0;
+.App-subHeading {
+  margin-bottom: 0;
 }
 
 .App-event {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
-	.App-event ul {
-		list-style-type: none;
-	}
+.App-event ul {
+  list-style-type: none;
+}
 
-	.App-event li {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		margin-bottom: 25px;
-	}
+.App-event li {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 25px;
+}
 
-		.App-event li.is-animated span {
-			display: block;
-			animation: App-logo-scale infinite .8s ease-in-out;
-		}
+.App-event li.is-animated span {
+  display: block;
+  animation: App-logo-scale infinite 0.8s ease-in-out;
+}
 
 .App-eventImage {
-	display: block;
-	width: 295px;
-	margin-left: 50px;
-	max-width: 44%;
+  display: block;
+  width: 295px;
+  margin-left: 50px;
+  max-width: 44%;
 }
 
 @keyframes App-logo-spin {
-	from {
-		transform: rotate(0deg);
-	}
+  from {
+    transform: rotate(0deg);
+  }
 
-	to {
-		transform: rotate(360deg);
-	}
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes App-logo-scale {
-	0% {
-		transform: scale(1);
-	}
+  0% {
+    transform: scale(1);
+  }
 
-	50% {
-		transform: scale(1.2);
-	}
+  50% {
+    transform: scale(1.2);
+  }
 
-	100% {
-		transform: scale(1);
-	}
+  100% {
+    transform: scale(1);
+  }
 }
